# Uav-PoC

./: .gitignore  1.py  README.md  stage_01_hello_drone.py  validate_model.py
ros2_ws/: .envrc  requirements.in
ros2_ws/src/uav_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/uav_interfaces/msg/: Detection.msg
ros2_ws/src/uav_perception/: CMakeLists.txt  package.xml  setup.cfg  setup.py
ros2_ws/src/uav_perception/msg/: Detections.msg
ros2_ws/src/uav_perception/uav_perception/: yolo_detector_node.py
ros2_ws/src/uav_simulation/: package.xml  setup.cfg  setup.py
ros2_ws/src/uav_simulation/uav_simulation/: video_publisher_node.py
ros2_ws/src/uav_visualizer/: package.xml  setup.cfg  setup.py
ros2_ws/src/uav_visualizer/uav_visualizer/: visualizer_node.py
sim_scripts/: run_isaac.sh  stage_01_hello_drone.py
