<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>uav_visualizer</name>
  <version>0.0.0</version>
  <description>A package to visualize UAV perception results.</description>
  <maintainer email="geantendormi76@gmail.com">zhz</maintainer>
  <license>Apache-2.0</license>

  <!-- 依赖项保持不变 -->
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>uav_interfaces</depend>
  <depend>message_filters</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <!-- 核心修正：将导出类型改回ament_python -->
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>